Sugati/src/objects/Credit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>CM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Credit_Expiry_Date__c</fullName>
        <label>Credit Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Credit_Memo_Date__c</fullName>
        <label>Credit Memo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Exchange_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Expired ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Total_Credit_Amount__c</fullName>
        <label>Total Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Credit Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>